# comp_graphics

./: .gitignore  flake.nix  pyproject.toml
first_lab/: __main__.py
